# haskell-concurrent-rpc

./: MissileLauncher.hs  README.md  concurrent-rpc.cabal  concurrent-services.cabal
src/Control/Concurrent/: RPC.hs  Service.hs
