name:                concurrent-services
version:             0.1.0.0
synopsis:            An abstraction for inter-thread RPC
description:
homepage:            https://github.com/lpeterse/haskell-concurrent-services
license:             MIT
license-file:        LICENSE
author:              Lars Petersen
maintainer:          info@lars-petersen.net
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Control.Concurrent.Service
  build-depends:       base >=4.8 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010
